--- a/app/src/main/res/layout/activity_busqueda.xml
+++ b/app/src/main/res/layout/activity_busqueda.xml
@@ -24,17 +24,46 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/usuarioactual"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="monospace"
+                android:text="wiwi"
+                android:textColor="@color/material_dynamic_tertiary10"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.925"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.977" />
+
             <View
                 android:id="@+id/view1"
-                android:layout_width="414dp"
-                android:layout_height="223dp"
-                android:layout_marginBottom="52dp"
+                android:layout_width="418dp"
+                android:layout_height="162dp"
+                android:layout_marginBottom="100dp"
                 android:background="@android:color/system_accent3_500"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.6"
+                app:layout_constraintHorizontal_bias="0.555"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="NewApi" />
+
+            <Button
+                android:id="@+id/bcerrarsesion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#A56363"
+                android:text="Cerrar Sesión"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.074"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.976" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView1"
@@ -113,13 +142,13 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#7B63A5"
                 android:text="Buscar"
-                android:textSize="34sp"
+                android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.149"
+                app:layout_constraintHorizontal_bias="0.101"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.725" />
+                app:layout_constraintVertical_bias="0.771" />
 
             <Button
                 android:id="@+id/bpublicar"
@@ -127,13 +156,13 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#7B63A5"
                 android:text="Publicar"
-                android:textSize="34sp"
+                android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.162"
+                app:layout_constraintHorizontal_bias="0.887"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.87" />
+                app:layout_constraintVertical_bias="0.771" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
