--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,11 +54,11 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/usuario"
+                        android:id="@+id/correoinicio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="monospace"
-                        android:text="Usuario:"
+                        android:text="Correo:"
                         android:textColor="@color/material_dynamic_tertiary10"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,7 +69,7 @@
                         app:layout_constraintVertical_bias="0.17" />
 
                     <TextView
-                        android:id="@+id/contrasena"
+                        android:id="@+id/editontrasenainicio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="monospace"
@@ -84,7 +84,7 @@
                         app:layout_constraintVertical_bias="0.459" />
 
                     <EditText
-                        android:id="@+id/editusuario"
+                        android:id="@+id/editcorreoinicio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -98,7 +98,7 @@
                         app:layout_constraintVertical_bias="0.289" />
 
                     <EditText
-                        android:id="@+id/editcontrasena"
+                        android:id="@+id/editcontrasenainicio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
