--- a/app/src/main/res/layout/activity_busqueda.xml
+++ b/app/src/main/res/layout/activity_busqueda.xml
@@ -85,7 +85,7 @@
                     android:background="@color/material_dynamic_tertiary70">
 
                     <ImageButton
-                        android:id="@+id/imageButton3"
+                        android:id="@+id/imestrella"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintBottom_toBottomOf="parent"
