--- a/app/src/main/res/layout/activity_busqueda.xml
+++ b/app/src/main/res/layout/activity_busqueda.xml
@@ -124,15 +124,14 @@
 
                     <ImageView
                         android:id="@+id/imageView2"
-                        android:layout_width="333dp"
-                        android:layout_height="131dp"
+                        android:layout_width="237dp"
+                        android:layout_height="241dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.523"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.296"
-                        app:srcCompat="@android:drawable/gallery_thumb" />
+                        app:srcCompat="@drawable/de_regalo_gato" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
